--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <hi>Hello HTML</h1>
-            <-- Hello from Olga -->
+            <!-- Hello from Olga -->
         <img src="img/pict.JPG" alt="wall in the museum">
     </body></hi>
 </html>
